Update vertx.bat